fix: adjust letter-spacing for main navigation list items for improved readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,7 @@ body.viewing-content::before {
 .main-nav li {
     margin-bottom: 1rem;
     font-family: var(--font-rounded);
-    letter-spacing: 5ch;
+    letter-spacing: 0.04em;
 }
 
 .main-nav button {
